# Kaleidoscope

./: Kaleidoscope.cabal  README.md
app/: Main.hs
src/: Lexer.hs  Lib.hs  Parser.hs  Syntax.hs
