name:                Kaleidoscope
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zelinf/Kaleidoscope#readme
license:             BSD3
license-file:        LICENSE
author:              Zelin Feng
maintainer:          fengzlin@mail2.sysu.edu.cn
copyright:           Zelin Feng, 2017, All rights reserved
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Syntax
                     , Parser
                     , Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , mtl
  default-language:    Haskell2010

executable repl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Kaleidoscope
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite Kaleidoscope-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Kaleidoscope
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zelinf/Kaleidoscope
